hphp/hack/test/full_fidelity/cases/test_expression_errors.php
<?hh

function f($x) {
  return $x{123}; // error: deprecated subscript syntax
}

function g($a, $b) {
  return $a ? : $b; // error: expected elvis operator
}
